2004-05-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/pcreshell.cc (Pattern::get_substring_bounds): Sanity-check
	for index >= 0 too.

2004-05-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (MainWindow::on_conf_value_changed): Remove
	"using namespace Gtk" directive which became pointless after the
	last change.

2004-05-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* regexxer.schemas.in (override_direction): Remove configuration
	option because it doesn't seem to be necessary anymore.  That is,
	the current GTK+ release gets the direction of Latin text in RTL
	locales right now.

	* src/globalstrings.h (conf_key_override_direction): Remove.
	* src/mainwindow.cc (MainWindow::on_conf_value_changed): Remove
	the code that handles the "override_direction" config option.
	* src/prefdialog.{cc,h} (PrefDialog): ditto.
	* ui/prefdialog.glade (button_override_direction): Remove.

2004-05-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.cc (FileBuffer::find_matches): Get rid of an
	unused main_context variable plus initialization code.  Whoa,
	this ancient piece of code must have been lurking here for at
	least a year without being used.  Unfortunately g++ didn't warn
	about it since the ctor/dtor might have had side effects...

2004-05-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* autogen.sh: In the regex used to extract version numbers, avoid
	any use of quantifiers other than * for maximum portability.

	* macros/pcre.m4 (PCRE_CHECK_VERSION): Same here, and also be more
	forgiving about extra characters possibly following the version
	number.

2004-05-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* macros/misc.m4 (REGEXXER_PKG_PATH_PROG): Replace AC_MSG_ERROR()
	by AC_MSG_FAILURE(), and add an autoconf-time check to make sure
	all necessary arguments are specified.

	* macros/pcre.m4: Replace AC_MSG_ERROR() by AC_MSG_FAILURE(), and
	add a few redirections of stderr to the config.log file descriptor
	where appropriate.
